fix: SBOM upload

--- a/.copilot-rules.md
+++ b/.copilot-rules.md
@@ -4,3 +4,4 @@
 - Baue immer eine nachhaltige Lösung keine schnelle
 - Achte auf Security wo immer es geht
 - Führe immer die Unit-Test, Integrations-Test und Security-Test über MAKE aus
+- Wenn du mehrere Lösungsansätze hast, implementiere den nachhaltigsten und nicht all die dir einfallen
