--- a/.copilot-rules.md
+++ b/.copilot-rules.md
@@ -5,3 +5,6 @@
 - Achte auf Security wo immer es geht
 - Führe immer die Unit-Test, Integrations-Test und Security-Test über MAKE aus
 - Wenn du mehrere Lösungsansätze hast, implementiere den nachhaltigsten und nicht all die dir einfallen
+
+# SOFTWARE
+- Wir implementiere alles mit Go 1.25.0 es gibt keine Ausnahme!
