--- a/.copilot-rules.md
+++ b/.copilot-rules.md
@@ -5,6 +5,7 @@
 - Achte auf Security wo immer es geht
 - Führe immer die Unit-Test, Integrations-Test und Security-Test über MAKE aus
 - Wenn du mehrere Lösungsansätze hast, implementiere den nachhaltigsten und nicht all die dir einfallen
+- Du deaktivierst keine Test, keine Security-Test, keine Gosec, kein govulncheck, keine integrations-Test nur weil du gerade nicht weiter kommt. Gebe einfach auf wenn es nicht funktioniert und gebe mir hinweise wonach ich suchen soll um das Problem zu lösen
 
 # SOFTWARE
 - Wir implementiere alles mit Go 1.25.0 es gibt keine Ausnahme!
